--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Appoinment</title>
+    <title>Appointment</title>
     <style>
       body{
   background-color: #ADD8E6;
@@ -237,7 +237,7 @@ footer{
 <div class="aa">
   <div class="pic">
       <div class="imgbox">
-    <img class="picc" src="mockp pic.jpg" alt="">
+    <img class="picc" src="pic1.jpg" alt="">
   </div>
 <div class="h">
   <h1 class="glow">Appointment</h1>
@@ -348,7 +348,7 @@ footer{
 
 <div class="fott">
   <footer>
-      Web Technology All-rights reserved
+      Jobayer Joyaddar  All-rights reserved
     </footer>
 </div>
 <script>
